# c-18-52-t-python

./: .gitignore  README.md  package-lock.json
EduWeb/: .gitignore  README.md  db.sqlite3  pyproject.toml
EduWeb/apps/forum/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
EduWeb/apps/forum/migrations/: 0001_initial.py  0002_alter_forum_author_alter_message_author.py  0003_alter_forum_classroom.py
EduWeb/apps/skills/: admin.py  models.py  serializers.py  urls.py  views.py
EduWeb/apps/skills/migrations/: 0001_initial.py  0002_alter_studentskill_student.py
EduWeb/apps/users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
EduWeb/apps/users/migrations/: 0001_initial.py  0002_alter_grade_grade.py  0003_remove_classroom_name_alter_grade_grade.py  0004_classroom_name.py  0005_alter_grade_grade.py  0006_event_title.py  0007_alter_event_created_by_alter_grade_student_and_more.py  0008_alter_grade_grade.py  0009_alter_grade_grade.py  0010_alter_grade_grade.py  0011_userprofile_parent_email_userprofile_parent_name_and_more.py
EduWeb/backend/: settings.py  urls.py
EduWeb/backend/config/: settings.py
EduWeb/frontend/templates/: logged_in.html  login.html
EduWeb/frontend/templates/forum/: create_forum.html  forum_detail.html  forum_list.html
frontend/: package-lock.json  package.json  tailwind.config.mjs
frontend/src/components/: Navbar-inicio.astro  Navbar-user.astro
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
